--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,19 +1,15 @@
 name: flutter build
-
 on:
   push:
     branches:    
       - master
-
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
-    #container:
-      #image:  google/dart
-      #cirrusci/flutter
-
+    name: Test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -24,4 +20,5 @@ jobs:
         channel: 'stable'
     - run: flutter pub get
     - run: flutter test
+    - run: flutter config --enable-web
     - run: flutter build web
