--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,7 +17,7 @@ jobs:
          java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        channel: 'master'
+        channel: 'beta'
     - run: flutter pub get
     - run: flutter test
     - run: flutter config --enable-web
