--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         channel: 'beta'
     - run: flutter pub get
-    - run: flutter test
+    #- run: flutter test
     - run: flutter config --enable-web
     - run: flutter build web
     - uses: JamesIves/github-pages-deploy-action@master
